[tool.poetry]
name = "scrape"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.2"
pymysql = "^1.1.0"
bs4 = "^0.0.1"
requests = "^2.31.0"
pandas = "^2.0.3"
mysql-connector-python = "^8.0.33"
gspread = "^5.10.0"
sqlalchemy = "^2.0.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
